--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ arif346 }}
+          username: ${{ ARIF346 }}
           password: ${{ arif12345 }}
 
       - name: Build and push Docker image
